<resources>
    <string name="app_name">江湖</string>
    <string name="home">首页</string>
    <string name="discover">发现</string>
    <string name="publish">发布</string>
    <string name="info">消息</string>
    <string name="me">我的</string>

    <!-- Error View -->
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>

    <string name="unlogin">未登录，请先登录</string>
    <string name="unlogin_tip">您还未登录\r\n或网络延迟</string>
    <string name="my_information_unlogin_tips">未登录</string>

    <string name="hint_username">输入账号/邮箱</string>
    <string name="hint_password">密码</string>
    <string name="login">登录</string>
    <string name="publish_info">江湖公告</string>
    <string name="publish_info_detail">江湖新增门派...</string>
    <string name="personal_info">个人公告</string>
    <string name="personal_info_detail">本人韩游中-可帮代购</string>
    <string name="help_task">救急任务</string>
</resources>
