<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    tools:context="com.jianghu.jh.ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg"
        android:orientation="vertical">


        <cn.bingoogolapple.bgabanner.BGABanner
            android:id="@+id/banner_main_default"
            style="@style/BannerDefaultStyle"
            android:background="@color/white"
            app:banner_pointGravity="bottom|right"
            app:banner_transitionEffect="depth"
            android:layout_height="94dp" />


        <android.support.v4.view.ViewPager
            android:id="@+id/myviewpager"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/space_5"
            android:layout_height="144dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:scaleType="fitXY" />

        <LinearLayout
            android:id="@+id/liner1"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal"

            android:textColor="@color/black"

            android:layout_height="wrap_content"></LinearLayout>

        <com.viewpagerindicator.LinePageIndicator
            android:id="@+id/indicator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="5dip" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/publish_info"
                        android:textColor="@color/awesome_orange"
                        android:textSize="@dimen/text_size_16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/publish_info_detail"
                        android:textSize="@dimen/text_size_12"/>

                </LinearLayout>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@mipmap/index_img"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false" />

            </LinearLayout>

            <View
                android:layout_width="0.3dp"
                android:layout_height="match_parent"
                android:background="@color/between_line" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_info"
                        android:textColor="@color/awesome_orange"
                        android:textSize="@dimen/text_size_16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/personal_info_detail"
                        android:textSize="@dimen/text_size_12"/>
                </LinearLayout>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@mipmap/index_img"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/between_line" />

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/white"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:orientation="horizontal">-->

            <!--<LinearLayout-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:layout_weight="1"-->
                <!--android:orientation="horizontal">-->

                <!--<LinearLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="2"-->
                    <!--android:gravity="center"-->
                    <!--android:orientation="vertical">-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="推广获大礼"-->
                        <!--android:textColor="@color/awesome_orange"-->
                        <!--android:textSize="@dimen/text_size_16" />-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginTop="2dp"-->
                        <!--android:text="推广获大礼"-->
                        <!--android:textSize="@dimen/text_size_12"/>-->

                <!--</LinearLayout>-->


                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:layout_weight="1"-->
                    <!--android:src="@mipmap/index_img" />-->

            <!--</LinearLayout>-->

            <!--<View-->
                <!--android:layout_width="0.3dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:background="@color/between_line" />-->


            <!--<LinearLayout-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:layout_weight="1"-->
                <!--android:orientation="horizontal">-->

                <!--<LinearLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="2"-->
                    <!--android:gravity="center"-->
                    <!--android:orientation="vertical">-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="推广获大礼"-->
                        <!--android:textColor="@color/awesome_orange"-->
                        <!--android:textSize="@dimen/text_size_16" />-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginTop="2dp"-->
                        <!--android:text="推广获大礼"-->
                        <!--android:textSize="@dimen/text_size_12"/>-->
                <!--</LinearLayout>-->


                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:layout_weight="1"-->
                    <!--android:src="@mipmap/index_img" />-->

            <!--</LinearLayout>-->

        <!--</LinearLayout>-->
        <LinearLayout
            android:id="@+id/my_order_layout"
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="400dp">
            <com.github.ksoichiro.android.observablescrollview.ObservableRecyclerView
                android:id="@+id/my_order_recycler_view_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                />
        </LinearLayout>
     </LinearLayout>
</ScrollView>

